syntax = "proto3";

option java_multiple_files = true;
option java_package = "hello";

package hello;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The actual message exchanged by the client and the server.
// NOTE: When creating a custom scenario plese edit only this message.
message Hello {
  string name = 1;
}

// The request message from the client.
message HelloRequest {
  Hello request = 1;
}

// The response message from the server.
message HelloReply {
  Hello response = 1;
}
